WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
90793
[Qt][WK2] Fix wheel scrolling for simple pages
https://bugs.webkit.org/show_bug.cgi?id=90793
Summary
[Qt][WK2] Fix wheel scrolling for simple pages
Andras Becsi
Reported
2012-07-09 08:22:19 PDT
[Qt][WK2] Fix wheel scrolling for simple pages
Attachments
Patch
(4.90 KB, patch)
2012-07-09 08:23 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
Patch
(9.68 KB, patch)
2012-07-09 08:27 PDT
,
Andras Becsi
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Andras Becsi
Comment 1
2012-07-09 08:23:17 PDT
Created
attachment 151251
[details]
Patch
Andras Becsi
Comment 2
2012-07-09 08:27:22 PDT
Created
attachment 151253
[details]
Patch
Kenneth Rohde Christiansen
Comment 3
2012-07-10 22:21:57 PDT
Comment on
attachment 151253
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=151253&action=review
I hope this doesnt cause regressions, so please be aware of those
> Source/WebKit2/WebProcess/WebPage/WebPage.cpp:876 > + // Always reset even when empty. > + // This also takes care of the relayout.
Could be one line comment
Andras Becsi
Comment 4
2012-07-11 02:49:38 PDT
Committed
r122321
: <
http://trac.webkit.org/changeset/122321
>
Andras Becsi
Comment 5
2012-07-27 03:23:57 PDT
Comment on
attachment 151253
[details]
Patch Clearing flags from attachment.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug